# kraft

./: CMakeLists.txt  LICENSE
assets/: camera_spec.ini  window_spec.ini
assets/programs/: default.frag.glsl  default.vert.glsl
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h
lib/stb/: CMakeLists.txt
src/: camera.c  camera.h  game.c  game.h  main.c  renderer.c  renderer.h  window.c  window.h
src/util/: debug.h  type.h
